syntax = "proto3";
package fairyring.fairyring;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "fairyring/x/fairyring/types";

// Msg defines the Msg service.
service Msg {
      rpc RegisterValidator(MsgRegisterValidator) returns (MsgRegisterValidatorResponse);
  rpc SendKeyshare(MsgSendKeyshare) returns (MsgSendKeyshareResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgRegisterValidator {
  string creator = 1;
}

message MsgRegisterValidatorResponse {
  string creator = 1;
}

message MsgSendKeyshare {
  string creator = 1;
  string message = 2;
  uint64 keyShareIndex = 3;
  uint64 blockHeight = 4;
}

message MsgSendKeyshareResponse {
  string creator = 1;
  string keyshare = 2;
  string keyshareIndex = 3;
  uint64 blockHeight = 4;
  uint64 receivedBlockHeight = 5;
}

// this line is used by starport scaffolding # proto/tx/message
